created notebook for classification

--- a/notebook_metabric_classification.ipynb
+++ b/notebook_metabric_classification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This code will be used to acquire data and visualize it.\n",
+    "This code will be used to acquire data and visualize it\n",
     "\n",
     "##### Data Acquisition and Extraction"
    ],
