--- a/metabric_classification.qmd
+++ b/metabric_classification.qmd
@@ -670,32 +670,51 @@ plt.show()
 
 ```
 
-# long-form DataFrame 
-pca_long_df = pca_df.melt(
-    id_vars="Claudin_Subtype",
-    value_vars=["PC1", "PC2"],
-    var_name="PC_Component",
-    value_name="Value"
+# Sanity Check: Is expression data normalized?
+```{python}
+# Expression data (patients x genes) 
+expr_check = expr_transposed_df.copy()
+
+# add Claudin subtype labels 
+expr_check['CLAUDIN_SUBTYPE'] = meta_df.loc[
+    expr_check.index, 'CLAUDIN_SUBTYPE'
+]
+
+# Remove samples without subtype
+expr_check = expr_check.dropna(subset=['CLAUDIN_SUBTYPE'])
+
+# Subsample genes
+np.random.seed(42)
+n_genes = 100  # number of genes to sample
+sampled_genes = np.random.choice(
+    expr_check.columns[:-1],  # exclude subtype column
+    size=n_genes,
+    replace=False
 )
 
-plt.figure(figsize=(14, 7))
-sns.set(style="whitegrid", palette="Set2")
+expr_subset = expr_check[sampled_genes.tolist() + ['CLAUDIN_SUBTYPE']]
 
+# Convert to long format
+expr_long = expr_subset.melt(
+    id_vars='CLAUDIN_SUBTYPE',
+    var_name='Gene',
+    value_name='Expression'
+)
+
+# Violin plot
+plt.figure(figsize=(10, 6))
 sns.violinplot(
-    data=pca_long_df,
-    x="Claudin_Subtype",
-    y="Value",
-    hue="PC_Component",
-    dodge=True
-    inner="quartile",   
-    palette={"PC1":"#1f77b4", "PC2":"#ff7f0e"}
+    data=expr_long,
+    x='CLAUDIN_SUBTYPE',
+    y='Expression',
+    inner='quartile',
+    cut=0
 )
 
-plt.xlabel("Claudin Subtype", fontsize=12, fontweight="bold")
-plt.ylabel("PCA Value", fontsize=12, fontweight="bold")
-plt.title("Distribution of PCA Components (PC1 & PC2) by Claudin Subtype before dropping NA values", fontsize=14, fontweight="bold")
-plt.xticks(rotation=45)
-plt.legend(title="PCA Component", loc="upper right")
+plt.axhline(0, color='red', linestyle='--', linewidth=1)
+plt.title("Sanity Check: Gene Expression (z-scores) per Claudin Subtype")
+plt.xlabel("Claudin Subtype")
+plt.ylabel("Expression (z-score)")
 plt.tight_layout()
 plt.show()
 ```
